# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.135 2005/04/12 04:07:39 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  11 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Finish overhaul of backend partitioning code. Fixed all bugs that stood in
  the way of partitioning from a blank disk.

  10 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  tidy_partitions() function in GLIStorageDevice. Tweaks to tidy code

  9 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Major GLIStorageDevice overhaul...all MB now instead of sectors.

  8 Apr 2005; Scott Myron <samyron@gentoo.org>
  Added support for DHCP options and MAC addresses in the InstallProfile.

  3 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
  Changed mountopts check to work for blank and whitespace. Pipe emerge through
  sed to properly strip out junk.

  2 Apr 2005; Preston Cody <codeman@gentoo.org>
  fixed the way set_timezone works.  added hotplug/coldplug for livecd-kernel
  added --emptytree to stage2. fixed ethx not being added to runlevel defalt.
  
  31 Mar 2005; Preston Cody <codeman@gentoo.org>
  Fixed indent problem in GLICController
  
  30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Check for disklabel type "loop" and use the device name without a minor.

  29 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Remove /tmp/compile_output.log and /var/log/install.log when install is
  complete. Added code to (hopefully) keep 2nd thread running after install.
  Patch from zahna for extra arguments to the kernel. Patch from zahna to add
  get_eth_info() function. Remove most of content in amd64ArchTemplate and
  make it inherit from x86Archtemplate. kernel_args -> bootloader_kernel_args

  28 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added 'append_log=True' to all spawn() calls using logfile=. Append to log
  when unpacking tarball.

  28 Mar 2005; Preston Cody <codeman@gentoo.org>