@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.135 2005/04/12 04:07:39 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.136 2005/04/12 04:27:42 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
   11 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Finish overhaul of backend partitioning code. Fixed all bugs that stood in
-  the way of partitioning from a blank disk.
+  the way of partitioning from a blank disk. Add int() around access to minor
+  key in partition information due to new partition code leaving them as float.
 
   10 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   tidy_partitions() function in GLIStorageDevice. Tweaks to tidy code
